--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mdi/react": "^1.6.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
