--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mdi/js": "^7.4.47",
     "@mdi/light-js": "^0.2.63",
     "@mdi/react": "^1.6.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
